--- a/Website/myproject/hf5/templates/hf5/layout.html
+++ b/Website/myproject/hf5/templates/hf5/layout.html
@@ -6,8 +6,10 @@
     <head>
         <title>{% block title %}HF5{% endblock %}</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        <link href="{% static 'movies/styles.css' %}" rel="stylesheet">
-        <script src="{% static 'movies/layout.js' %}"></script>
+        
+          <link href="{% static 'styles.css' %}" rel="stylesheet">
+        
+        
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
@@ -30,6 +32,22 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'warnings' %}">Warnings</a>
                 </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'startup' %}">Startup</a>
+              </li>
+
+
+              
+              <li class="nav-item">
+                  <a class="nav-link" href="{% url 'login' %}">Login</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+            </li>
+              
+                
+
+
             <ul>
                 
           </nav>
