--- a/Website/myproject/hf5/templates/hf5/index.html
+++ b/Website/myproject/hf5/templates/hf5/index.html
@@ -37,7 +37,7 @@
 
 
 <ul>
-{% for dict in data %}   
+{% for dict in page.object_list %}   
 
 
     {% if dict.Local.id == device or device == 0 or device == None%}
@@ -47,6 +47,22 @@
 {% endfor %}
 
 </ul>
+
+
+
+
+
+
+<footer>
+
+    {% if page.has_previous %}
+    <a id="previous" data-page="{{page.previous_page_number}}" class="btn next-previous btn-secondary">Previous</a>
+    {% endif %}
+    {% if page.has_next %}
+    <a id="next" data-page="{{page.next_page_number}}" class="btn next-previous btn-primary">Next</a>
+    {% endif %}
+
+</footer>
 
 
 
